gcc/testsuite/rust/rustc/ui/issues/issue-21449.rs
mod MyMod {}

fn main() {
    let myVar = MyMod { T: 0 };
// { dg-error ".E0574." "" { target *-*-* } .-1 }
}

